--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+aniso8601==10.0.0
 astroid==3.3.8
+bcrypt==4.3.0
 blinker==1.9.0
 cffi==1.17.1
 click==8.1.8
@@ -6,6 +8,9 @@ cryptography==44.0.1
 dill==0.3.9
 dotenv==0.9.9
 Flask==3.1.0
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.3
+Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
 isort==6.0.0
 itsdangerous==2.2.0
@@ -19,9 +24,10 @@ pylint==3.3.4
 PyMySQL==1.1.1
 pyparsing==3.2.1
 python-dotenv==1.0.1
+pytz==2025.1
 pyUML==0.1.0a0
+six==1.17.0
 SQLAlchemy==2.0.38
 tomlkit==0.13.2
 typing_extensions==4.12.2
 Werkzeug==3.1.3
-Flask-RESTful==0.3.10
